# strava-activities-analyzer

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt  strava_activities.csv  strava_auth.py  strava_client.py  strava_data_extractor.py  summarize_activities.py  visualize_activities.py
.devcontainer/: devcontainer.json
