[tool.poetry]
name = "strava-activities-analyzer"
version = "0.1.0"
description = "Aplicación personal para analizar y visualizar actividades de Strava"
authors = ["Andoni Rodriguez"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.0"
pandas = "^2.2.1"
plotly = "^5.19.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
flask = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
visualize = "streamlit:run" 